# apis/src/interfaces/http/handlers/modules/mod.rs
@@ -4,6 +4,7 @@ pub mod delete_module;
 pub mod list_modules;
 pub mod list_modules_deep;
 pub mod update_module;
+pub mod bulk_update_positions;
 
 pub use create_module::create_module;
 pub use create_module_deep::create_module_deep;
@@ -11,3 +12,4 @@ pub use delete_module::delete_module;
 pub use list_modules::list_modules;
 pub use list_modules_deep::list_modules_deep;
 pub use update_module::update_module;
+pub use bulk_update_positions::bulk_update_module_positions;
